--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@ p{ margin:10px auto}
 
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;"I find that the harder I work, the more luck I seem to have." Thomas Jefferson</p>
 
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor</p>
-
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Associate Professor, <a href="https://soft.buaa.edu.cn" style="text-decoration: none">School of Software</a>, <a href="https://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China</p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab)</p>
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office:&nbsp; #37 Xueyuan Rd., Haidian District, Beijing, China &nbsp;</p>
 
@@ -189,9 +188,11 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (06/2023) RAIDS Lab is open for bridging AI and Systems. We are recruiting young talents! <span class="red">Postdoc/PhD/MSc positions or BSc internship are open to apply! </span></span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (01/03/2023) I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
+<p><span class="style11"> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
+
+<p><span class="style11"> (01/03/2023) I will be joining Beihang University as Associate Professor in Summer 2023. I'm actively looking for strong and motivated students and welcome applicants from diverse backgrounds. </span></p>
 
 <p><span class="style11"> (21/02/2023) Our work on affinity-aware multi-dimensional time-varying resource packing is accepted by Journal of Parallel and Distributed Computing (JPDC). The <a href="https://github.com/DSSGroup-Leeds/LRA-binpacking-expe" style="text-decoration: none"> algorithm suite </a> is publicly available. </span></p>
 
@@ -206,7 +207,7 @@ p{ margin:10px auto}
 
 <p class="Bolder"><img src="icons/bio-banner.png" width="25" height="25" border="0"/> Short Bio</p> 
 
-<p><span class="style11"> I am now an associate professor at Beihang University. I was a lead Research Fellow funded by UK EPSRC, 
+<p><span class="style11"> I am now an Associate Professor at Beihang University and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab). I was a lead Research Fellow funded by UK EPSRC, 
 	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
 	<a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, 
 	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, 
@@ -347,7 +348,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (~£35K), Kuaishou Research Gift Award, Co-I, 2023 - 2024  </span></p> 
+<p><span class="style11">&bull; Algorithmic Scheduling Support for Efficient AI Model Training (¥300K~£35K), Kuaishou Research Gift Award, Co-PI, 2023 - 2024  </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -355,13 +356,13 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.4 </span></p> 
 
-<p><span class="style11">&bull; Farm Observatory Instrumentation (£4M+), University of Leeds, module lead, 2021.3 - 2023.4 </span></p> 
+<p><span class="style11">&bull; Farm Observatory Instrumentation (£4M+), University of Leeds, module leader, 2021.3 - 2023.4 </span></p> 
 
-<p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and module lead, 2020.2 - 2020.8 </span></p>
+<p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and module leader, 2020.2 - 2020.8 </span></p>
 
-<p><span class="style11">&bull; Boden Type Data Center One (No.768875, €2.87M), funded by European Comission’s Horizon 2020 Programme (Horizon 2020), module lead, 2018.6 - 2019.12 </span></p>
+<p><span class="style11">&bull; Boden Type Data Center One (No.768875, €2.87M), funded by European Comission’s Horizon 2020 Programme (Horizon 2020), module leader, 2018.6 - 2019.12 </span></p>
 
-<p><span class="style11">&bull; Pin the Tail: Understanding Straggler Manifestation in Internet-based Distributed Systems (EP/P031617/1, £97K), UK Engineering and Physical Sciences Research Council (EPSRC), module lead, 2017.9 - 2019.12 </span></p>
+<p><span class="style11">&bull; Pin the Tail: Understanding Straggler Manifestation in Internet-based Distributed Systems (EP/P031617/1, £97K), UK Engineering and Physical Sciences Research Council (EPSRC), module leader, 2017.9 - 2019.12 </span></p>
 
 <p><span class="style11">&bull; Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  co-author, project leader/coordinator, 2016.6 - 2018.5 </span></p>
 
@@ -386,33 +387,34 @@ I had the opportunity to work closely with many institutes around the world and 
 I have been co-advising and/or working closely with many students/PDRAs mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Prof. Zheng Wang), Jiayu Zhao (2021.9- , Uni of Leeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Hao Peng) </span></p>
+<p><span class="style11">&bull; PhD Students: Yihui Zhang (2023.9- , BeihangU, with Prof. Tianyu Wo), Yuyan Zhao (2023.9- , BeihangU, with Prof. Tianyu Wo), Jinghao Wang (2023.5- , BeihangU, with Prof. Chunming Hu and Dr. Xu Wang), Jiayu Zhao (2021.9- , UoLeeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Pengyuan Zhou) </span></p>
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
-<p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin (2021.1-2023.4, University of Leeds, Postdocs) </span></p>
-<p><span class="style11">&bull; Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, Beihang Uni.) </span></p>
+<p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin (2021.1-2023.4, UoLeeds, Postdocs) </span></p>
+<p><span class="style11">&bull; Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, BeihangU) </span></p>
+<p><span class="style11">&bull; <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (PhD., 2019.9-2023.12, UoLeeds, with Prof. Jie Xu and Prof. Zheng Wang)</span></p>
 
-<p><span class="style11">&bull; Youmei Song (PhD., 2017.9- 2023.4, BDBC and Beihang Uni., with Prof. Tianyu Wo, first employment Postdoc)</span></p>
-<p><span class="style11">&bull; Jianyong Zhu (PhD., 2017.9-2022.3 , BDBC and Beihang Uni., with Prof. Chunming Hu, first employment Assistant Professor at NCEPU)</span></p>
+<p><span class="style11">&bull; Youmei Song (PhD., 2017.9- 2023.4, BDBC and BeihangU, with Prof. Tianyu Wo, first employment Postdoc at HKPolyU, China)</span></p>
+<p><span class="style11">&bull; Jianyong Zhu (PhD., 2017.9-2022.3 , BDBC and BeihangU, with Prof. Chunming Hu, first employment Assistant Professor at NCEPU, China)</span></p>
 <p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei R&D UK) </span></p>
-<p><span class="style11">&bull; Yiming Hei (PhD., 2019.9-2022.1, BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng)
-<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu, first employment CEO at TaibahValley, KSA)
+<p><span class="style11">&bull; Yiming Hei (PhD., 2019.9-2022.1, BDBC and BeihangU, with Prof. Jianwei Liu and Dr. Hao Peng)
+<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, UoLeeds, with Prof. Jie Xu, first employment CEO at TaibahValley, KSA)
 </span></p> 
-<p><span class="style11">&bull; Xiaochen Sun (Visiting PhD. Student, 2019.9-2020.9, Uni. of Leeds, with Prof. Jie Xu) 
+<p><span class="style11">&bull; Xiaochen Sun (Visiting PhD. Student, 2019.9-2020.9, UoLeeds, with Prof. Jie Xu) 
 </span></p> 
 
-<p><span class="style11">&bull; MSc. Students@Leeds: Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu) 
-Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds), 
-Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, Uni. of Leeds), 
-Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (MSc of COMP5200M, 2019.4-2019.9, Uni. of Leeds) </span></p>
+<p><span class="style11">&bull; MSc. Students @Leeds: Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, UoLeeds, with Prof. Jie Xu) 
+Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, UoLeeds), 
+Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, UoLeeds), 
+Xuyang Cao, Yuecheng Pei, Yuncheng Xie, Guoxiang Liao (MSc of COMP5200M, 2019.4-2019.9, UoLeeds) </span></p>
 
-<p><span class="style11">&bull; MSc. Students@BHU: Shiqing Xue (2018.9-2020.12, Beihang Uni., first employment at Tecent Group), Junqing Xiao (MSc, 2016.9-2018.12, first employment at Alibaba Group), Ximing Qu (MSc, 2016.9-2018.12, first employment at Alibaba Group), 
-	Xiaoyang Sun (MSc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK), Lian Du (MSc, 2015.9-2018.3, first employment at Alibaba Group), Hailun Wang (MSc, 2015.9-2017.3, first employment at Baidu Inc.),  
+<p><span class="style11">&bull; MSc. Students (Research) @BHU: Shiqing Xue (2018.9-2020.12, Beihang, first employment at Tecent Group), Junqing Xiao (MSc, 2016.9-2018.12, first employment at Alibaba Group), Ximing Qu (MSc, 2016.9-2018.12, first employment at Alibaba Group), 
+	Xiaoyang Sun (MSc, 2015.9-2018.3, PhD student at UoLeeds. UK), Lian Du (MSc, 2015.9-2018.3, first employment at Alibaba Group), Hailun Wang (MSc, 2015.9-2017.3, first employment at Baidu Inc.),  
 	Xixu Wang (MSc, 2014.9-2017.3, first employment at Baidu Inc.), Wenbo Jiang (MSc, 2013.9-2016.3, first employment at NetEase Inc.), Yunchang Zhao (MSc, 2013.9-2016.3, first employment at an Internet startup), Yuda Wang (MSc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
 	
-<p><span class="style11">&bull; BSc. Students: Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, Uni. of Leeds, with Prof. Jie Xu), 
-	Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu), 
-	Chris London (BSc, 2021, Uni. of Leeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, Uni. of Leeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, Uni. of Leeds, first employment at Knowledge Integration Ltd. UK), <a href="https://people.cs.uchicago.edu/~michaelht/" style="text-decoration: none">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US) </span></p>
+<p><span class="style11">&bull; BSc. Students: Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, UoLeeds, with Prof. Jie Xu), 
+	Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, UoLeeds, with Prof. Jie Xu), 
+	Chris London (BSc, 2021, UoLeeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, UoLeeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, UoLeeds, first employment at Knowledge Integration Ltd. UK), <a href="https://people.cs.uchicago.edu/~michaelht/" style="text-decoration: none">Michael Hao Tong</a> (B.Sc, 2012.9-2014.6, PhD student at UoChicago, US) </span></p>
 
 
 <p><span class="style11">
@@ -433,11 +435,15 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <div id="div_teaching">
 
+
 <p><span class="Bolder"><img src="icons/presentation-banner.png" width="25" height="25" border="0"/> Teaching and Presentations </span></p>
  
-<p><span class="style11">&bull; Cloud Computing (CS61839, Graduate Level, Beihang University), Spring 2017 (together with Prof. Chunming Hu et. al)</span></p> 
+<p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023 </span></p>
+<p><span class="style11">&bull; Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), Autumn 2023 </span></p> 
 
-<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, University of Leeds), Autumn 2020/2021/2022 (together with Prof. Jie Xu)</span></p> 
+<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, together with Prof. Jie Xu), Autumn 2020-2022</span></p> 
+
+<p><span class="style11">&bull; Essentials of Cloud Computing (CS61839, Graduate Level, BeihangU, with Prof. Chunming Hu), Spring 2017</span></p> 
 
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html" style="text-decoration: none">~$ talks</a> </span></p>
 
