--- a/presentations.html
+++ b/presentations.html
@@ -103,6 +103,11 @@ p{ margin:10px auto}
 </span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 <hr style="width:100%;text-align:left;margin-left:0">
 
+<p><span class="style11">&bull; Large-scale Computing Infrastrcutures for Intelligence. Invited Talk, July 2023, Beihang University Summer School </span> &nbsp;</p>
+
+<p><span class="style11">&bull; Intelligent GPU Cluster Scheduling with Job Interleaving and Elastic Autoscaling. Invited Talk, June 2023, Kuaishou Inc. </span> &nbsp;</p>
+
+<p><span class="style11">&bull; Large-scale Resource Scheduling - Academic and Industrial Experience. Invited Talk, June 2022, Beihang University Forum </span> &nbsp;</p>
 
 <p><span class="style11">&bull; Cluster Resource Scheduling - Academic and Industrial Experience. Invited Talk, 13th Feb., 2019, Newcastle University upon Tyne, Newcastle, UK </span> &nbsp;</p>
 
