--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ p{ margin:10px auto}
 
 
 <div id="div_news">
-<p class="Bolder"><img src="icons/news-banner.png" width="25" height="25" border="0"/> What's New</p>
+<p class="Bolder"><!--img src="icons/news-banner.png" width="25" height="25" border="0"/--> What's New</p>
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed), deadline: <span class="red">31 Oct 2023</span> </span></p>
 
@@ -205,7 +205,7 @@ p{ margin:10px auto}
 
 <div id="div_bio">
 
-<p class="Bolder"><img src="icons/bio-banner.png" width="25" height="25" border="0"/> Short Bio</p> 
+<p class="Bolder"><!--img src="icons/bio-banner.png" width="25" height="25" border="0"/--> Short Bio</p> 
 
 <p><span class="style11"> I am now an Associate Professor at Beihang University and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab). I was a lead Research Fellow funded by UK EPSRC, 
 	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
@@ -243,7 +243,7 @@ p{ margin:10px auto}
 
 <div id="div_interest">
 
-<p><span class="Bolder"><img src="icons/research-banner.png" width="25" height="25" border="0"/> Research Interests</span></p>
+<p><span class="Bolder"><!--img src="icons/research-banner.png" width="25" height="25" border="0"/--> Research Interests</span></p>
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed systems of big data, cloud computing and IoT at scale. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; Resource efficiency of large-scale datacenters through 
 		QoS-aware scheduling and resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>,<a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>,<a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>,<a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>,<a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>], 
@@ -260,7 +260,7 @@ p{ margin:10px auto}
 
 
 <div id="div_exp">
-<p><span class="Bolder"><img src="icons/edu-banner.png" width="25" height="25" border="0"/> Education</span></p>
+<p><span class="Bolder"><!--img src="icons/edu-banner.png" width="25" height="25" border="0"/--> Education</span></p>
 
 <p><span class="style11">&bull;  2011.9 - 2017.2: &nbsp;&nbsp; PhD. Computer Science (with Distinction Honor), supervised by Prof. Jie Xu and Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
@@ -268,7 +268,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull;  2007.9 - 2011.6: &nbsp;&nbsp; BSc. Computer Science (equivalent to 1st Class Honours), supervised by Prof. Tianyu Wo, Beihang University, China &nbsp;&nbsp;</span></p>
 
-<p><span class="Bolder"><img src="icons/job-banner.png" width="25" height="25" border="0"/> Academia & Industry Experience</span></p>
+<p><span class="Bolder"><!--img src="icons/job-banner.png" width="25" height="25" border="0"/--> Work Experience</span></p>
 
 <p><span class="style11">&bull; 2023.5 - present: &nbsp; Associate Professor, Beihang University, Beijing, China</span></p>
 
@@ -294,7 +294,7 @@ p{ margin:10px auto}
 
 <div id="div_pub">
 
-<p><span class="Bolder"><img src="icons/paper-banner.png" width="25" height="25" border="0"/> Selected Recent Publications </span></p>
+<p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
 
 
 <p><span class="style11">~$ pub -rl</span></p> 
@@ -341,7 +341,7 @@ p{ margin:10px auto}
 
 <div id="div_grants">
 
-<p><span class="Bolder"><img src="icons/grant-banner.png" width="25" height="25" border="0"/> Selected Research Grants</span></p>
+<p><span class="Bolder"><!--img src="icons/grant-banner.png" width="25" height="25" border="0"/--> Selected Research Grants</span></p>
 
 <p><span class="style11">  
 I had the opportunity to work closely with many institutes around the world and engaged in many government/industry funded research projects to solve real-world problems with innovative cloud and analytic technologies.</span></p>
@@ -381,7 +381,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <div id="div_team">
 
 
-<p><span class="Bolder"><img src="icons/supervision-banner.png" width="25" height="25" border="0"/> Student Supervision </span></p>
+<p><span class="Bolder"><!--img src="icons/supervision-banner.png" width="25" height="25" border="0"/--> Student Supervision </span></p>
 
 <p><span class="style11"> 
 I have been co-advising and/or working closely with many students/PDRAs mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
@@ -436,12 +436,12 @@ I have been collaborating closely with many brilliant researchers around the wor
 <div id="div_teaching">
 
 
-<p><span class="Bolder"><img src="icons/presentation-banner.png" width="25" height="25" border="0"/> Teaching and Presentations </span></p>
+<p><span class="Bolder"><!--img src="icons/presentation-banner.png" width="25" height="25" border="0"/--> Teaching and Presentations </span></p>
  
 <p><span class="style11">&bull; Scientific Research Class (Undergraduate Level, BeihangU), Autumn 2023 </span></p>
 <p><span class="style11">&bull; Service Computing (Graduate Level, BeihangU, with Dr. Xu Wang), Autumn 2023 </span></p> 
 
-<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, together with Prof. Jie Xu), Autumn 2020-2022</span></p> 
+<p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022</span></p> 
 
 <p><span class="style11">&bull; Essentials of Cloud Computing (CS61839, Graduate Level, BeihangU, with Prof. Chunming Hu), Spring 2017</span></p> 
 
@@ -451,7 +451,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <div id="div_services">
-<p><span class="Bolder"><img src="icons/service-banner.png" width="22" height="25" border="0"/> Selected Professional Services </span></p>
+<p><span class="Bolder"><!--img src="icons/service-banner.png" width="22" height="25" border="0"/--> Selected Professional Services </span></p>
 
 <p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed)</span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
@@ -467,7 +467,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 <p><span class="style11">&bull; More professional services can be found here: <a href="services.html" style="text-decoration: none">~$ services</a> </span></p>
 
-<p><span class="Bolder"><img src="icons/award-banner.png" width="25" height="25" border="0"/>Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder"><!--img src="icons/award-banner.png" width="25" height="25" border="0"/-->Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
 <p><span class="style11">&bull;	  <strong>Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
 
@@ -487,7 +487,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <div id="div_misc">
-<p><span class="Bolder"><img src="icons/misc-banner.png" width="25" height="25" border="0"/> Misc</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
+<p><span class="Bolder"><!--img src="icons/misc-banner.png" width="25" height="25" border="0"/--> Misc</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 <p><span class="style11"> Outside of work, I really enjoy  <img src="icons/running.png" width="15" height="15" border="0"/> long-distance running, <img src="icons/calligraphy.png" width="15" height="15" border="0"/> traditional chinese calligraphy, <img src="icons/architecture.png" width="15" height="15" border="0"/> architectural design, <img src="icons/cooking.png" width="15" height="15" border="0"/> cooking world wide foods, and <img src="icons/music.png" width="15" height="15" border="0"/> music.
 </span></p>
 </div>
