--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ p{ margin:10px auto}
 
 <br>
 <!--table width="1550" height="359"-->
-<table style="width: 92%; height: auto;">
+<table style="width: 88%; height: auto;">
 <tbody>
 
 <tr>
@@ -188,7 +188,7 @@ p{ margin:10px auto}
 
 <p><span class="style11"> <img src="icons/bell.gif" width="14" height="12" border="0"/> <span class="red">[Call for Papers]</span> <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690), deadline: <span class="red">15 August 2023</span> </span></p>
 
-<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (06/2023) RAIDS Lab is open for bridging AI and Systems. We are recruiting young talents! <span class="red">Postdoc/PhD/MSc positions or BSc internship are open to apply! </span></span></p>
+<p><span class="style11"> <img src="icons/news.gif" width="25" height="12" border="0"/> (06/2023) RAIDS Lab is open and we are recruiting young talents! <span class="red">Postdoc/PhD/MSc/undergraduate intern positions are open to apply! </span></span></p>
 
 <p><span class="style11"> (20/04/2023) I presented a poster on <a href="paper/ati2023-poster.pdf">Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters</a> in the UK Alan Turing Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing.</span></p>
 
@@ -207,21 +207,20 @@ p{ margin:10px auto}
 
 <p class="Bolder"><!--img src="icons/bio-banner.png" width="25" height="25" border="0"/--> Short Bio</p> 
 
-<p><span class="style11"> I am now an Associate Professor at Beihang University and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab). I was a lead Research Fellow funded by UK EPSRC, 
-	with the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
-	<a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, 
+<p><span class="style11"> I am an Associate Professor and Co-Director of Reliable, Automated and Intelligent Distributed Systems Lab (RAIDS Lab) at Beihang University, China. Before moving back to Beijing, 
+	I worked in the UK as a lead Research Fellow (2020-2023), funded by UK EPSRC, at the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, 
 	and <a href="https://lida.leeds.ac.uk/" style="text-decoration: none">Leeds Institute for Data Analytics (LIDA)</a>, 
-	University of Leeds, UK. Prior to this, I was a research scientist at Edgetic Ltd., a UK-based high-tech spin-out company 
+	University of Leeds and as a research scientist (2018-2020) at Edgetic Ltd., a UK-based high-tech spin-out company 
 	that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of 
-	data center efficiency and intelligence. I was a research scientist and lead project manager with the
+	data center efficiency and intelligence. Prior to this, I was a research scientist and lead project manager with the
 	<a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, 
-	Beijing, China. During 2014 to 2016, I was also with Alibaba Group, participating in the 
+	Beijing, China.  I was also with Alibaba Group (2014-2016), participating in the 
 	development and research on intelligent resource scheduling and performance optimization at Internet scale. 
 	My research interests include large-scale dependable distributed systems, trustworthy data-centric engineering, 
 	deep learning systems and applications such as graph representation learning, anomaly detection, etc.
 </span>
 
-<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 1,900+ citations, i10-index=35, h-index=21, by April 2023), 
+<p><span class="style11"> I have published 60+ refereed journal and conference papers (<a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">Googe Scholar</a> 2,000+ citations, h-index=21, by July 2023), 
 	including top ACM/IEEE Transactions and conference proceedings such as TPDS, TC, TKDE, TNNLS, TSC, TOIS, TKDD, JPDC, ACM Computing Surveys (CSUR), 
 	VLDB, SC, WWW, ICDCS, DSN, SoCC, SECON, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral 
 	Enrichment Award 2022 for resilient deep reinforcement learning, and was awarded the Grand Class of Scientific and 
@@ -270,9 +269,9 @@ p{ margin:10px auto}
 
 <p><span class="Bolder"><!--img src="icons/job-banner.png" width="25" height="25" border="0"/--> Work Experience</span></p>
 
-<p><span class="style11">&bull; 2023.5 - present: &nbsp; Associate Professor, Beihang University, Beijing, China</span></p>
+<p><span class="style11">&bull; 2023.5 - present: &nbsp; Associate Professor, School of Software, Beihang University, Beijing, China</span></p>
 
-<p><span class="style11">&bull; 2020.9 - 2023.4: &nbsp; Lead Research Fellow, University of Leeds, UK</span></p> 
+<p><span class="style11">&bull; 2020.9 - 2023.4: &nbsp; Lead Research Fellow, University of Leeds, Leeds, UK</span></p> 
 
 <p><span class="style11">&bull; 2018.6 - 2020.8: &nbsp; Research Scientist, Edgetic Ltd., UK and Adjunct Research Fellow at University of Leeds, Leeds, UK </span></p> 
 
@@ -284,7 +283,7 @@ p{ margin:10px auto}
  
 <p><span class="style11">&bull; 2014.2 - 2016.2: &nbsp; R&D Intern (Mentored by <a href = "https://www.linkedin.com/in/zhuo-joe-zhang-24913433" style="text-decoration: none">Zhuo (Joe) Zhang</a> and <a href="https://cn.linkedin.com/in/chao-li-5749352b" style="text-decoration: none">Chao Li</a>), Fuxi Distributed Scheduling Group, <a href="http://www.aliyun.com" style="text-decoration: none"> Alibaba Group</a>, Beijing, China </span></p>
 
-<p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, Networked Computing Group and MSDS, Beihang University, Beijing, China </span></p> 
+<p><span class="style11">&bull; 2011.9 - 2017.2: &nbsp; Teaching and Research Assistant, Team Leader, Networked Computing Group, Beihang University, Beijing, China </span></p> 
 
 
 </div>
@@ -386,21 +385,26 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11"> 
 I have been co-advising and/or working closely with many students/PDRAs mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
-<p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: Yihui Zhang (2023.9- , BeihangU, with Prof. Tianyu Wo), Yuyan Zhao (2023.9- , BeihangU, with Prof. Tianyu Wo), Jinghao Wang (2023.5- , BeihangU, with Prof. Chunming Hu and Dr. Xu Wang), Jiayu Zhao (2021.9- , UoLeeds, with Prof. Zheng Wang), Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Pengyuan Zhou) </span></p>
+<p><span class="style11">~$  <strong> team -l PhD </strong> </span></p>
+<p><span class="style11">&bull; Yihui Zhang (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; Yuyan Zhao (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; Yulin Su (2023.9- , BeihangU, with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; Jinghao Wang (2023.5- , BeihangU, with Prof. Chunming Hu and Dr. Xu Wang) </span></p> 
+<p><span class="style11">&bull;  Jiayu Zhao (2021.9- , UoLeeds, with Prof. Zheng Wang) </span></p>
+<p><span class="style11">&bull; Yingguang Yang (2021.7-, USTC, with Prof. Yong Liao and Dr. Pengyuan Zhou) </span></p>
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
-<p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin (2021.1-2023.4, UoLeeds, Postdocs) </span></p>
-<p><span class="style11">&bull; Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, BeihangU) </span></p>
+<p><span class="style11">&bull; Dr. Satish Kumar, Dr. Zeinab Nezami, Dr. Clément Mommessin (Postdoc, 2021.1-2023.4, UoLeeds) </span></p>
+<p><span class="style11">&bull; Dr. Qi Shen (Postdoc, 2017.9-2019.8, BeihangU) </span></p>
 <p><span class="style11">&bull; <a href="https://xshaun.github.io/" style="text-decoration: none">Xiaoyang Sun</a> (PhD., 2019.9-2023.12, UoLeeds, with Prof. Jie Xu and Prof. Zheng Wang)</span></p>
 
-<p><span class="style11">&bull; Youmei Song (PhD., 2017.9- 2023.4, BDBC and BeihangU, with Prof. Tianyu Wo, first employment Postdoc at HKPolyU, China)</span></p>
-<p><span class="style11">&bull; Jianyong Zhu (PhD., 2017.9-2022.3 , BDBC and BeihangU, with Prof. Chunming Hu, first employment Assistant Professor at NCEPU, China)</span></p>
-<p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei R&D UK) </span></p>
-<p><span class="style11">&bull; Yiming Hei (PhD., 2019.9-2022.1, BDBC and BeihangU, with Prof. Jianwei Liu and Dr. Hao Peng)
-<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, UoLeeds, with Prof. Jie Xu, first employment CEO at TaibahValley, KSA)
+<p><span class="style11">&bull; Youmei Song (PhD, 2017.9- 2023.4, BDBC and BeihangU, with Prof. Tianyu Wo, first employment Postdoc at HKPolyU, China)</span></p>
+<p><span class="style11">&bull; Jianyong Zhu (PhD, 2017.9-2022.3 , BDBC and BeihangU, with Prof. Chunming Hu, first employment Assistant Professor at NCEPU, China)</span></p>
+<p><span class="style11">&bull; <a href="https://uk.linkedin.com/in/gingfung-matthew-yeung-a71688a2" style="text-decoration: none">Gingfung Yeung</a> (PhD, 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment Research Scientist at Huawei R&D UK) </span></p>
+<p><span class="style11">&bull; Yiming Hei (PhD, 2019.9-2022.1, BDBC and BeihangU, with Prof. Jianwei Liu and Dr. Hao Peng)
+<p><span class="style11">&bull; Jaber Almutairi (PhD, 2018.6 - 2020.1, UoLeeds, with Prof. Jie Xu, first employment CEO at TaibahValley, KSA)
 </span></p> 
-<p><span class="style11">&bull; Xiaochen Sun (Visiting PhD. Student, 2019.9-2020.9, UoLeeds, with Prof. Jie Xu) 
+<p><span class="style11">&bull; Xiaochen Sun (Visiting PhD Student, 2019.9-2020.9, UoLeeds, with Prof. Jie Xu) 
 </span></p> 
 
 <p><span class="style11">&bull; MSc. Students @Leeds: Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, UoLeeds, with Prof. Jie Xu) 
